--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+.*
+!.*/
 *~
 
 # temporary files which can be created if a process still has a handle open of a deleted file
@@ -11,3 +13,8 @@
 
 # .nfs files are created when an open file is removed but is still being accessed
 .nfs*
+
+# Byte-compiled / optimized / DLL files
+__pycache__/
+*.py[cod]
+*$py.class
